--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,14 @@ jobs:
       matrix:
         os: [macos-latest]
     runs-on: ${{ matrix.os }}
-
+    env:
+      # HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK is set to 1 to disable the automatic upgrade of formulae during the brew install process.
+      # This can help prevent unexpected failures in GitHub Actions.
+      HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
     steps:
-      - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v23
-      - uses: cachix/cachix-action@v12
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # pin@v4
+      - uses: cachix/install-nix-action@6a9a9e84a173d90b3ffb42c5ddaf9ea033fad011 # pin@v23
+      - uses: cachix/cachix-action@6a9a34cdd93d0ae4b4b59fd678660efb08109f2f # pin@v12
         with:
           name: devenv
       - name: Install devenv.sh
@@ -24,10 +27,10 @@ jobs:
       - name: Build the devenv shell and run any pre-commit hooks
         run: devenv ci
 
-      - name: Run a single command in the devenv shell
-        run: devenv shell hello
+      # https://github.com/Homebrew/actions/blob/55e35ac78132cc31ce174408f40a9676e64aa0e2/setup-homebrew/README.md?plain=1#L10-L12
+      - name: Set up Homebrew
+        uses: Homebrew/actions/setup-homebrew@55e35ac78132cc31ce174408f40a9676e64aa0e2 # pin@55e35ac78132cc31ce174408f40a9676e64aa0e2
 
-      - name: Run a multi-line command in the devenv shell
-        shell: devenv shell bash -e {0}
-        run: |
-          hello
+      - name: Install formula
+        # Without this `--cask`, Homebrew tries to interpret `say.rb` as a formula, leading to a warning.
+        run: brew install --cask Casks/say.rb
