--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,4 @@ jobs:
         run: devenv ci
 
       - name: Install formula
-        # Without this `--cask`, Homebrew tries to interpret `say.rb` as a formula, leading to a warning.
-        run: brew install --cask Casks/say.rb
+        run: brew install Casks/say.rb
